--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ build:
   number: 1
   skip: true  # [win]
   run_exports:
-    - {{ pin_subpackage('eclib', max_pin='x' }}
+    - {{ pin_subpackage('eclib', max_pin='x') }}
 
 requirements:
   build:
