--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,9 +9,11 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/JohnCremona/eclib/archive/v{{ version }}.tar.gz
   sha256: 176840c9dbed6156f291da3c877ce680f746acf0dcd1b952174f1e046f28b71d
+  patches:
+    - 0001-Install-missing-include.patch
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   run_exports:
     - {{ pin_subpackage('eclib', max_pin='x') }}
@@ -55,3 +57,4 @@ about:
 extra:
   recipe-maintainers:
     - isuruf
+    - saraedum
