--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,12 +6,13 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/JohnCremona/eclib/archive/{{ version }}.tar.gz
   sha256: bd6f0191876c1426ca57db851ce06ef79ea1755f01e81dd747358d1b76b5e932
+  patches:
+    - patches/gh74.patch
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
   run_exports:
     - {{ pin_subpackage('eclib', max_pin='x') }}
