--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,12 +6,13 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/JohnCremona/eclib/archive/v{{ version }}.tar.gz
   sha256: b34b95d2eb759c4a7757d0c155646744393074bc56fee755cfd36ea7f6130152
+  patches:
+    - gmp.diff
 
 build:
-  number: 3
+  number: 4
   skip: true  # [win]
   run_exports:
     - {{ pin_subpackage('eclib', max_pin='x') }}
@@ -32,16 +33,11 @@ requirements:
     - gf2x
   run:
     - {{ pin_compatible('pari') }}
-    - ntl
-    - libflint
-    - mpfr
-    - gmp
-    - gf2x
 
 test:
   commands:
     - test -f ${PREFIX}/include/eclib/arith.h
-    - test -f ${PREFIX}/lib/libec.a
+    - test ! -f ${PREFIX}/lib/libec.a
     - test -f ${PREFIX}/lib/libec.dylib     # [osx]
     - test -f ${PREFIX}/lib/libec.so        # [linux]
 
